https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.28.1]]
==== 1.28.1 - YYYY/MM/DD

[float]
===== Features

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.28.0]]
==== 1.28.0 - 2021/12/07

[float]
===== Features
* Adding experimental support for <<aws-lambda, AWS Lambda>> - {pull}1951[#1951]
* Now supporting tomcat 10 - {pull}2229[#2229]

[float]
===== Bug fixes
* Fix error with parsing APM Server version for 7.16+ - {pull}2313[#2313]

[[release-notes-1.27.1]]
==== 1.27.1 - 2021/11/30

[float]
===== Features
* Add support to Jakarta EE for JSF - {pull}2254[#2254]

[float]
===== Bug fixes
* Fixing missing Micrometer metrics in Spring boot due to premature initialization - {pull}2255[#2255]
* Fixing hostname trimming of FQDN too aggressive - {pull}2286[#2286]
* Fixing agent `unknown` version - {pull}2289[#2289]
* Improve runtime attach configuration reliability - {pull}2283[#2283]

[[release-notes-1.27.0]]
==== 1.27.0 - 2021/11/15

[float]
===== Potentially breaking changes
* `transaction_ignore_urls` now relies on full request URL path - {pull}2146[#2146]
** On a typical application server like Tomcat, deploying an `app.war` application to the non-ROOT context makes it accessible with `http://localhost:8080/app/`
** Ignoring the whole webapp through `/app/*` was not possible until now.
** Existing configuration may need to be updated to include the deployment context, thus for example `/static/*.js` used to
exclude known static files in all applications might be changed to `/app/static/*.js` or `*/static/*.js`.
** It only impacts prefix patterns due to the additional context path in pattern.