@@ -28,6 +28,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Preferring controller names for Spring MVC transactions, `use_path_as_transaction_name` only as a fallback - {pull}2320[#2320]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
